--- a/static/style.css
+++ b/static/style.css
@@ -58,6 +58,11 @@ header {
     margin-bottom: .8rem;
 }
 
+.filters__date-btn {
+    padding: .4rem;
+    margin-top: .5rem;
+}
+
 .content {
     flex: 70%;
     background-color: #efefef;
