--- a/static/style.css
+++ b/static/style.css
@@ -94,6 +94,7 @@ header {
 
 .content__item-name {
     margin-bottom: 1rem;
+    cursor: pointer;
 }
 
 .content__item-date {
@@ -105,14 +106,14 @@ header {
     display: block;
 }
 
-.modal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 1000;
-    width: 100%;
-    height: 100%;
-    background-color: #111;
-    backdrop-filter: blur(15px);
-    opacity: .4;
+.dialog__name {
+    margin-bottom: 1rem;
+}
+
+.dialog__meta {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: .8em;
+    margin-bottom: 1rem;
 }
